--- a/zpeng/www/proj_stock.html
+++ b/zpeng/www/proj_stock.html
@@ -41,10 +41,10 @@
                 <form id="model_sel" style="text-align: left"><b>Choose predictors:</b><br />
                     <input type="checkbox" name="vol" value="vol" checked>Volume change<br />
                     <input type="checkbox" name="ret" value="ret" checked>Stock Return<br />
-                    <input type="checkbox" name="ret1" value="ret1" checked>Return 1-day ago<br />
-                    <input type="checkbox" name="ret2" value="ret2">Return 2-day ago<br />
-                    <input type="checkbox" name="ret3" value="ret3">Return 3-day ago<br />
-                    <input type="checkbox" name="ret4" value="ret4">Return 4-day ago<br />
+                    <input type="checkbox" name="ret1" value="ret1" checked>Lag1 Return(1-day ago)<br />
+                    <input type="checkbox" name="ret2" value="ret2">Lag2 Return<br />
+                    <input type="checkbox" name="ret3" value="ret3">Lag3 Return<br />
+                    <input type="checkbox" name="ret4" value="ret4">Lag4 Return<br />
                     <input type="checkbox" name="retSP" value="retSP" checked>Return of S&P index<br />
                     <input type="checkbox" name="retNA" value="retNA">Return of Nasdaq index<br />
                 </form>  
